Make implmentation resistent to null values. Added convenience methods Round.addCusotmer and Customer.addParcel. Updated unit tests.